force-app/main/default/objects/Job_Application__c/fields/Count_of_Rating__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Rating__c</fullName>
    <label>Count_of_Rating</label>
    <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>