force-app/main/default/objects/Job_Application__c/fields/Review_Average__c.field-meta.xml
<CustomField>
    <fullName>Review_Average__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &apos;New&apos;), 10, 20)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the average of all ratings</inlineHelpText>
    <label>Review Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>