force-app/main/default/objects/Job_Application__c/fields/Sum_of_rating__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_rating__c</fullName>
    <description>Sum of the Review ratings</description>
    <label>Sum_of_rating</label>
    <summarizedField>Review__c.Rating__c</summarizedField>
    <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>