force-app/main/default/objects/Job_Application__c/validationRules/Reparenting_of_lookup.validationRule-meta.xml
<ValidationRule>
    <fullName>Reparenting_of_lookup</fullName>
    <active>true</active>
    <description>cannot change the candidate name once entered through lookup field</description>
    <errorConditionFormula>AND ( NOT (ISNEW()) ,  ISCHANGED( Candidate__c ))</errorConditionFormula>
    <errorMessage>Reparenting of lookup field not allowed</errorMessage>
</ValidationRule>