force-app/main/default/objects/Job_Application__c/listViews/My_view.listView-meta.xml
<ListView>
    <fullName>My_view</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Candidate__c</columns>
    <columns>Position__c</columns>
    <columns>Review_Average__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>My view</label>
</ListView>